[package]
name = "hanokei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
winit = "0.28.2"
glam = "0.23.0"
image = "0.24.6"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"